[pom] Add argline to open java.lang for jdk 17 and add jboss classfilewriter override for jdk 17